--- a/products.html
+++ b/products.html
@@ -74,7 +74,7 @@
                 <img src="images/INB1.png" alt="" />
                 </a>
                 <a href="IN2.html">
-                <h4>Luminous Zelio+ 1100 Home Pure Sinewave Inverter UPS - Black</h4>
+                <h4>Luminous Zelio+ 1100 Home Pure Sinewave Inverter UPS</h4>
                 </a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -121,6 +121,112 @@
         </div>
         <div class="row">
             <div class="col-4">
+                <a href="IN5.html">
+
+                    <img src="images/imerlyn-ups-850-12v-dg-3.png" alt="" />
+                </a>
+                <a href="IN5.html">
+
+                    <h4>Microtek iMERLYN Digital UPS Model 850 (12V) DG</h4>
+                </a>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>Rs.4100</p>
+            </div>
+            <div class="col-4">
+                <a href="IN6.html">
+
+                <img src="images/super-power-digital-ups-model-700-12v-dg-3.jpg" alt="" />
+                </a>
+                <a href="IN6.html">
+                <h4>Super Power Digital UPS Model 700 (12V) DG</h4>
+                </a>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-o"></i>
+                </div>
+                <p>Rs.3599</p>
+            </div>
+            <div class="col-4">
+                <a href="IN7.html">
+                <img src="images/energy-saver-digital-ups-model-825-12v-dg-3.jpg" alt="" />
+                </a>
+                <a href="IN7.html">
+                <h4>Energy Saver Digital UPS Model 1825 (24V) DG</h4>
+                </a>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>Rs.7299</p>
+            </div>
+            <div class="col-4">
+                <a href="IN8.html">
+                <img src="images/energy-saver-digital-ups-model-825-12v-dg-3.jpg" alt="" />
+                </a>
+                <a href="IN8.html">
+                <h4>Energy Saver Digital UPS Model 825 (12V) DG
+                </h4>
+                </a>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-o"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>Rs.4100</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <a href="IN9.html">
+
+                    <img src="images/1-Copy-800x418-1648198578.png" alt="" />
+                </a>
+                <a href="IN9.html">
+
+                    <h4>Livguard i2-Verter LG 700 Square Wave Inverter</h4>
+                </a>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>Rs.4000</p>
+            </div>
+            <div class="col-4">
+                <a href="IN10.html">
+
+                <img src="images/Screenshot 2023-03-31 133918.png" alt="" />
+                </a>
+                <a href="IN10.html">
+                <h4>Microtek Home UPS LUXE SW 1000 Lcd Display Pure Sine Wave Inverter</h4>
+                </a>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-o"></i>
+                </div>
+                <p>Rs.6399</p>
+            </div>
+
+            <div class="col-4">
                 <a href="BT1.html">
                 <img src="images/Screenshot 2023-03-29 133547.png" alt="" />
                 </a><a href="BT1.html">
@@ -148,6 +254,9 @@
                 </div>
                 <p>Rs.12499</p>
             </div>
+           
+        </div>
+        <div class="row">
             <div class="col-4">
                 <a href="BT3.html">
                 <img src="images/Screenshot 2023-03-29 135928.png" alt="" /></a><a href="BT3.html">
@@ -174,8 +283,6 @@
                 </div>
                 <p>Rs.12499</p>
             </div>
-        </div>
-        <div class="row">
             <div class="col-4">
                 <a href="BT5.html">
                 <img src="images/34a2e049-4f9a-4eb0-9070-dccd58e450aa_SC 18060 battery-1.png" alt="" /></a><a href="BT5.html">
@@ -202,6 +309,7 @@
                 </div>
                 <p>Rs.17999</p>
             </div>
+
             <div class="col-4">
                 <a href="BT7.html">
                 <img src="images/51IQ0cg718S.jpg" alt="" /></a><a href="BT7.html">
@@ -229,32 +337,9 @@
                 <p>Rs.11999</p>
             </div>
             <div class="col-4">
-                <img src="images/pro10-bobbi brown-5600.png" alt="" />
-                <h4>Bobbi Brown Cream</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-half-o"></i>
-                </div>
-                <p>Rs.5600</p>
-            </div>
-            <div class="col-4">
-                <img src="images/pro10-bobbi brown-5600.png" alt="" />
-                <h4>Bobbi Brown Cream</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-half-o"></i>
-                </div>
-                <p>Rs.5600</p>
-            </div>
-            <div class="col-4">
-                <img src="images/pro11-AccessHer-39500.png" alt="" />
-                <h4>Access Her Necklace</h4>
+                <a href="BT9.html">
+                <img src="images/vt-165.jpg" alt="" /></a><a href="BT9.html">
+                <h4>V-GUARD VT165 152AH Tall Tubular Battery</h4></a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -262,11 +347,12 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star-o"></i>
                 </div>
-                <p>Rs.39500</p>
+                <p>Rs.13999</p>
             </div>
             <div class="col-4">
-                <img src="images/pro12-fossil-14296.png" alt="" />
-                <h4>Fossil Smart Watch</h4>
+                <a href="BT10.html">
+                <img src="images/Screenshot 2023-03-31 132004.png" alt="" /></a><a href="BT10.html">
+                <h4>Mtekpower EBHT18566 160Ah Battery</h4></a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -274,58 +360,9 @@
                     <i class="fa fa-star-half-o"></i>
                     <i class="fa fa-star-o"></i>
                 </div>
-                <p>Rs.14296</p>
+                <p>Rs.13999</p>
             </div>
         </div>
-        <div class="row">
-            <div class="col-4">
-                <img src="images/pro13-lacoste-2550.png" alt="" />
-                <h4>Lacoste kids T-shirt</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>Rs.2550</p>
-            </div>
-            <div class="col-4">
-                <img src="images/pro14-The Light Lamp-21360.png" alt="" />
-                <h4>The Light Lamp</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-half-o"></i>
-                </div>
-                <p>Rs.21360</p>
-            </div>
-            <div class="col-4">
-                <img src="images/pro15-harmon kardon-14990.png" alt="" />
-                <h4>Harmon Kardon Headphones</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>Rs.149900</p>
-            </div>
-            <div class="col-4">
-                <img src="images/pro16-steve madden - 8999.png" alt="" />
-                <h4>Steve Madden Heels</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-half-o"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>Rs.8999</p>
-            </div>
         </div>
     </div>
     </div>
