--- a/VBT2.html
+++ b/VBT2.html
@@ -25,8 +25,7 @@
                     <li><a href="products.html">Products</a></li>
                     <li><a href="">About us</a></li>
                     <li><a href="contact.html">Contacts</a></li>
-                    <li><a href="account.html">Account</a>
-                    </li>
+                    <li><a href="account.html">Account</a></li>
                 </ul>
             </nav>
             <a href="Under construction/UC.html">
@@ -42,17 +41,17 @@
     <div class="small-container single-product">
         <div class="row">
             <div class="col-2">
-                <img src="images/energy-saver-digital-ups-model-825-12v-dg-3.jpg" alt="" width="100%" id="ProductImg">
+                <img src="images/ML38B20L_Front.jpg" alt="" width="100%" id="ProductImg">
 
                 <div class="small-img-row">
                     <div class="small-img-col">
-                        <img src="images/energy-saver-digital-ups-model-825-12v-dg-3.jpg" alt="" width="100%" class="small-img">
+                        <img src="images/ML38B20L_Front.jpg" alt="" width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="images/Screenshot 2023-03-31 140554.png" alt="" width="100%" class="small-img">
+                        <img src="images/51tAqS1e3mL._SX522_.jpg" alt="" width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="images/Screenshot 2023-03-31 140602.png" alt="" width="100%" class="small-img">
+                        <img src="images/" alt="" width="100%" class="small-img">
                     </div>
 
 
@@ -60,28 +59,20 @@
 
             </div>
             <div class="col-2">
-                <p>Home / Inverter</p>
-                <h1>Energy Saver Digital UPS Model 1825 (24V) DG</h1>
-                <h4>Rs.7299</h4>
+                <p>Home / Vehicle Batteries</p>
+                <h1>EXIDE MILEAGE(ML38B20L)</h1>
+                <h4>Rs.3999</h4>
                 <input type="number" value="1">
                 <a href="" class="btn">Add to Cart</a>
                 <h3>Product Details <i class="fa fa-indent"></i></h3>
                 <br>
-                <p>Micro Controller Based Intelligent Control Design.
-                    LED Display Indications for UPS Status and Fault
-                    CCCV Technology with Auto Trickle Mode
-                    Smart Overload Sense and Short Circuit Protection
-                    Battery State Monitoring
-                    Multi Stage Battery Charger
-                    Mains Input Voltage Range Slide Selection Switch
-                    Battery Slide Selection Switch (Local/Flat/Tubular)</p>
+                <p>Safe to use Durable in use Efficient in use
+                    This is a durable product
+                    It ensures you get the best usage for a longer period
+                    Size Name: Small; Compatible With Vehicle Type: Van</p>
             </div>
         </div>
     </div>
-
-
-
-
 
     <div class="footer">
         <div class="container">
