--- a/Under construction/UC.html
+++ b/Under construction/UC.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="progress.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="images/main-logo.png">
     <title>Website Under Construction HTML Page</title>
 </head>
 
