--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                 <img src="images/menu.png" alt="" class="menu-icon" onclick="menutoggle()">
             </div>
             <div class="container">
-                <form action="action_page.php">
+                <form action="mailto:harish9336289136@gmail.com">
               
                   <label for="fname">First Name</label>
                   <input type="text" id="fname" name="firstname" placeholder="Your name..">
