--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
                         <img src="images/main-logo.png" alt="" / width="125px">
                     </a>
                 </div>
-                
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5185027875573170"
+     crossorigin="anonymous"></script>
                 <nav>
                     <ul id="MenuItems">
                         <li><a href="index.html">Home</a></li>
